tests/files/parser_tests/should_fail/023.cmdr
//Should not parse due to unterminated tuple
x = (1, 2, 3;
